--- a/app/assets/stylesheets/city/smartCity/frontpage.css.sass
+++ b/app/assets/stylesheets/city/smartCity/frontpage.css.sass
@@ -1,3 +1,11 @@
+.headerFront
+	a
+		margin-left: auto
+		margin-right: auto
+		width: 150px
+		display: block
+		margin-top: 100px
+
 .input_username
 	color: #fff
 	input
@@ -19,6 +27,7 @@
 .fondo   
 	background-image: url(himalaya.jpg)
 	background-size: 100%
+	background-repeat: none
 .pois
 	font-size: 12px
 
