--- a/app/views/layouts/frontpage.html.erb
+++ b/app/views/layouts/frontpage.html.erb
@@ -28,7 +28,7 @@
       </div>
     </div>
     <footer class="footer">
-      <%= render :partial => "layouts/footer" %>
+      <%#= render :partial => "layouts/footer" %>
     </footer>
   </body>
 </html>
