--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -58,6 +58,7 @@
 @import "city/smartCity/planification"
 @import "city/smartCity/trips"
 @import "city/smartCity/frontpage"
+@import "city/smartCity/places"
 
 //smart city b-rewrite
 @import "city/smartCity/b-rewrite/_responsive-767px-max"
