--- a/app/assets/stylesheets/city/smartCity/items.css.sass
+++ b/app/assets/stylesheets/city/smartCity/items.css.sass
@@ -77,12 +77,13 @@
 .places
 	.list
 		width: 100%
+		margin-left: 0px
 		.thumbnail
 			display: inline-block
 			float: left
 			margin-bottom: -10px
 			margin-left: 10px
-			width: 280px
+			@include grid-fluid-span(11, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			.photo
 				width: 54px
 				height: 54px
@@ -100,7 +101,7 @@
 				float: left
 				padding: 5px 0 0
 				margin-left: 10px
-				width: 216px
+				@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				address
 					margin-bottom: 0px
 
@@ -116,6 +117,32 @@
 			li
 				margin-left: 0px
 				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.thumbnail
+					h4
+						overflow: hidden
+						white-space: nowrap
+						text-overflow: ellipsis
+						text-align: left
+						margin-bottom: 3px
+						margin-top: 3px
+						font-size: 16px
+					img
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						height: 120px
+					p
+						font-size: 12px
+						padding-bottom: 0px
+						margin-bottom: 0px
+						margin-top: 5px
+
+@media (min-width: 980px) and (max-width: 1050px)
+	.guide_home
+
+		ul.thumbnails
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			li
+				margin-left: 0px
+				@include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				.thumbnail
 					h4
 						overflow: hidden
