Add link to profile in header

--- a/app/views/layouts/_headers_mobile.html.erb
+++ b/app/views/layouts/_headers_mobile.html.erb
@@ -21,7 +21,7 @@
             <$%= render partial: 'layouts/header_dropdown' %>
           </li> -->
           <li class="active">
-            <a class="" href="">Profile</a>
+            <%= link_to "Profile", current_subject %>
           </li>
           <li class="active">
             <a class="" href="">Plannings</a>
