--- a/app/assets/stylesheets/city/smartCity/places.css.sass
+++ b/app/assets/stylesheets/city/smartCity/places.css.sass
@@ -24,3 +24,32 @@
 		@include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		display: inline-block
 		float: left
+
+@media (max-width: 767px)
+	.place_show
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		display: inline-block
+		float: left
+		h2
+		.info_photo
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: inline-block
+			float: left
+			img
+				height: auto
+
+		.map
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: inline-block
+			float: left
+
+
+		.description
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: inline-block
+			float: left
+
+		.coment-social
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: inline-block
+			float: left
