--- a/app/assets/stylesheets/city/smartCity/trips.css.sass
+++ b/app/assets/stylesheets/city/smartCity/trips.css.sass
@@ -5,7 +5,7 @@
 		margin-left: auto
 		margin-right: auto
 		margin-bottom: 20px
-		width: 385px
+		@include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		li
 			display: inline-block
 			margin-bottom: 10px
@@ -25,7 +25,7 @@
 	transition: all 0.2s ease-in-out 0s
 	position: relative
 	img
-		width: 152px
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		height: 103px
 		border-radius: 7px 0px 0px 7px
 	.caption
@@ -40,13 +40,13 @@
 			font-size: 17px
 			height: 22px
 			opacity: 0.8
-			width: 151px
+			
 	.caption_img
 		img
 			position: absolute
 			z-index: 2
 			bottom: 70px
-			left: 126px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			width: auto
 			height: auto
 			
@@ -61,7 +61,7 @@
 	transition: all 0.2s ease-in-out 0s
 	position: relative
 	img
-		width: 152px
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		height: 103px
 		border-radius: 7px 0px 0px 7px
 	.caption
@@ -76,12 +76,12 @@
 			font-size: 17px
 			height: 22px
 			opacity: 0.8
-			width: 151px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 	.caption_img
 		img
 			position: absolute
 			z-index: 2
 			bottom: 70px
-			left: 133px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			width: auto
 			height: auto
