--- a/app/assets/stylesheets/city/smartCity/layout.css.sass
+++ b/app/assets/stylesheets/city/smartCity/layout.css.sass
@@ -160,3 +160,47 @@
 				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				float: right
 				display: inline-block
+
+
+
+
+
+
+.container
+	@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-1
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+
+	.grid-2_left
+		@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-2_right
+		@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+
+	.grid-3_left
+		@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-3_center
+		@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-3_right
+		@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+
+
+	.grid-4_left
+		@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-4_center
+		@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-4_right
+		@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+
+
+	.grid-5_left
+		@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-5_center-left
+		@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-5_center-right
+		@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+	.grid-5_right
+		@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
