--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<article class="left_home">
+<!--<article class="left_home">
 	<div class="info_city">
 		<%= render :partial => "home/info_city" %>
 	</div>
@@ -26,7 +26,7 @@
 		<ul class="thumbnails sortable">
 			<%= render :partial => "home/planification" %>
 		</ul>
-		<!--http://jqueryui.com/draggable/#sortable-->
+
 	</div>
 	<h2><%= link_to t('comments') %></h2>
 
@@ -38,5 +38,8 @@
   </div>
   
 </article>
+-->
 
 
+<div class="grid-2_left">SADFASDFASDF</div>
+<div class="grid-2_right">ASDFASFASDFA</div
