--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,32 +1,17 @@
 <!-- HTML5 DOCTYPE -->
 <!DOCTYPE html>
 <html lang="<%= I18n.locale.to_s %>">
-  <head>
-    <%= render :partial => "layouts/head" %>
-
-    <script>
-      $(function() {
-      $( ".sortable" ).sortable({
-      revert: true
-      });
-      $( "ul, li" ).disableSelection();
-      });
-    </script>
-
-  </head>
   <body>
-
     <%= render :partial => "layouts/header" %>
     <section class="container">
       <div class="row-fluid">
         <div class="banner"></div>
-        <%#= render :partial => "layouts/flash", :locals => {:flash => flash} %>
+        <%= flashy %>
         <%= yield %>
       </div>
     </section>
     <footer class="footer">
-      <%#= render :partial => "layouts/footer" %>
+      <%= render :partial => "layouts/footer" %>
     </footer>
-
   </body>
 </html>
