--- a/app/views/guides/_item.html.erb
+++ b/app/views/guides/_item.html.erb
@@ -4,9 +4,9 @@
 		<div class="caption">
 			<a href="/guides/1"><h4>Basic guide</h4></a>
 			<p>A short guide with the principal places... </p>
-			<p>
-				<a class="btn btn-primary" href="#">Add to my guide</a>
-			</p>
+			
+			<a class="btn btn-primary" href="#">Add</a>
+			
 		</div>
 	</div>
 </li>
@@ -17,9 +17,9 @@
 		<div class="caption">
 			<a href="/guides/1"><h4>Toledo in 24 hours</h4></a>
 			<p>The essence of Toledo in 24 hours</p>
-			<p>
-				<a class="btn btn-primary" href="#">Add to my guide</a>
-			</p>
+			
+			<a class="btn btn-primary" href="#">Add</a>
+			
 		</div>
 	</div>
 </li>
