--- a/app/assets/stylesheets/city/smartCity/home.css.sass
+++ b/app/assets/stylesheets/city/smartCity/home.css.sass
@@ -1,5 +1,6 @@
+@media (min-width: 980px) and (max-width: 1200px)
 .container
-	.left_home
+	.grid-2_left
 		.info_city
 			margin-left: 0px
 			.Carousel-trip
@@ -23,13 +24,15 @@
 			margin-top: 0px
 			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			.all-item
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				.search_all
-					@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
 					float: left
-
+					.form-search
+						input
+							@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				.option_search
-					@include grid-fluid-offset(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
 					float: left
@@ -37,19 +40,97 @@
 						input
 							margin-left: -10px
 							margin-right: 5px
-					
 				.view_type
 					@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
 					float: right
-					.btn-group
-						float: right
+					.btn
+						@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				.guide_home
 					@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 					display: inline-block
 					float: left
 
-	.right_home
+	.grid-2_right
+		h2
+			display: inline-block
+			@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			a
+				color: $gray
+				font-family: $sansFontFamily
+			a:hover
+				text-decoration: none
+		.dropdown
+			display: inline-block
+			@include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+		.planification
+			display: inline-block
+			@include border-radius(5px)
+			overflow-y: auto
+			overflow-x: hidden
+			max-height: 350px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.comments_object
+			display: inline-block
+
+@media (min-width: 767px) and (max-width: 979px)
+	.container
+	.grid-2_left
+		.info_city
+			margin-left: 0px
+			.Carousel-trip
+				.item
+					img
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						max-height: 300px				
+				.carousel-caption
+					padding-top: 0
+					bottom: 0px
+					left: 0%
+					background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
+					h1
+						font-size: 35px
+						color: #9A9A9A
+						opacity: 0.8
+					p
+						font-size: 16px
+		.interest_points
+			margin-left: 0px
+			margin-top: 0px
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			.all-item
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.search_all
+					@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					display: inline-block
+					float: left
+					.form-search
+						.input-append
+							input
+								@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.option_search
+					@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					display: inline-block
+					float: left
+					.btn-group
+						float: right
+						.checkbox
+							input
+								margin-left: -10px
+								margin-right: 5px
+				.view_type
+					@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					display: inline-block
+					float: right
+					.btn
+						@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.guide_home
+					@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					display: inline-block
+					float: left
+
+	.grid-2_right
 		h2
 			display: inline-block
 			@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
@@ -76,5 +157,83 @@
 
 
 
+@media (max-width: 767px)
+	.container
+		.grid-2_left
+			.info_city
+				margin-left: 0px
+				.Carousel-trip
+					.item
+						img
+							@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+							max-height: 300px				
+					.carousel-caption
+						padding-top: 0
+						bottom: 0px
+						left: 0%
+						background: none repeat scroll 0 0 rgba(0, 0, 0, 0.75)
+						h1
+							font-size: 20px
+							color: #9A9A9A
+							opacity: 0.8
+						p
+							font-size: 14px
+			.interest_points
+				margin-left: 0px
+				margin-top: 0px
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.all-item
+					@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					.search_all
+						@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						display: inline-block
+						float: left
+						.form-search
+							input
+								@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+					.option_search
+						@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						display: inline-block
+						float: right
+						.checkbox
+							input
+								margin-left: -10px
+								margin-right: 5px
+					.view_type
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						@include center-block()
+						clear: both
+						margin-bottom: 5px
+						.btn-group
+							@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+							
+							.btn
+								width: 33.429%
 
+					.guide_home
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						display: inline-block
+						float: left
 
+		.grid-2_right
+			h2
+				display: inline-block
+				@include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				a
+					color: $gray
+					font-family: $sansFontFamily
+				a:hover
+					text-decoration: none
+			.dropdown
+				display: inline-block
+				@include grid-fluid-span(1, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+			.planification
+				display: inline-block
+				@include border-radius(5px)
+				overflow-y: auto
+				overflow-x: hidden
+				max-height: 350px
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			.comments_object
+				display: inline-block
