--- a/app/assets/stylesheets/city/smartCity/items.css.sass
+++ b/app/assets/stylesheets/city/smartCity/items.css.sass
@@ -1,11 +1,11 @@
+//guide home responsive
+
 .guide_home
 	ul.thumbnails
 		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		li
 			margin-bottom: 10px
 			margin-left: 10px
-			
-			
 			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			.thumbnail
 				height: 250px
@@ -26,10 +26,111 @@
 					margin-bottom: 0px
 					margin-top: 5px
 
+@media (min-width: 980px) and (max-width: 1200px)
+	.guide_home
+		ul.thumbnails
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			li
+				margin-bottom: 10px
+				margin-left: 10px
+				@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.thumbnail
+					height: 250px
+					h4
+						overflow: hidden
+						white-space: nowrap
+						text-overflow: ellipsis
+						text-align: left
+						margin-bottom: 3px
+						margin-top: 3px
+						font-size: 16px
+					img
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						height: 120px
+					p
+						font-size: 12px
+						padding-bottom: 0px
+						margin-bottom: 0px
+						margin-top: 5px
+
+@media (min-width: 767px) and (max-width: 979px)
+	.guide_home
+		ul.thumbnails
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			li
+				margin-bottom: 10px
+				margin-left: 10px
+				
+				
+				@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+				.thumbnail
+					height: 250px
+					h4
+						overflow: hidden
+						white-space: nowrap
+						text-overflow: ellipsis
+						text-align: left
+						margin-bottom: 3px
+						margin-top: 3px
+						font-size: 16px
+					img
+						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						height: 120px
+					p
+						font-size: 12px
+						padding-bottom: 0px
+						margin-bottom: 0px
+						margin-top: 5px
+
+@media (max-width: 767px)
+	.guide_home
+		ul.thumbnails
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+			li
+				margin-left: 0px
+				display: inline-block
+				margin-bottom: 10px
+				float: left
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+				.thumbnail
+					height: auto
+					img
+						@include grid-fluid-span(4, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						height: 80px
+					.caption
+						@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+						float: right
+						padding: 0px
+						h4
+							overflow: hidden
+							white-space: nowrap
+							text-overflow: ellipsis
+							text-align: left
+							margin-bottom: 3px
+							margin-top: 3px
+							font-size: 16px
+
+						p
+							@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+							font-size: 12px
+							padding-bottom: 0px
+							margin-bottom: 0px
+							margin-top: 5px
+							float: left
+							display: inline-block
+						a.btn
+							@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+							display: inline-block
+							float: right
+							margin-top: 0px
+							padding: 5px
 
 
 
-//planning
+//planning home responsive
+
 .planification
 	ul.thumbnails
 		margin: 0
@@ -104,59 +205,3 @@
 				@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
 				address
 					margin-bottom: 0px
-
-
-
-		
-
-@media (max-width: 767px)
-	.guide_home
-
-		ul.thumbnails
-			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-			li
-				margin-left: 0px
-				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-				.thumbnail
-					h4
-						overflow: hidden
-						white-space: nowrap
-						text-overflow: ellipsis
-						text-align: left
-						margin-bottom: 3px
-						margin-top: 3px
-						font-size: 16px
-					img
-						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-						height: 120px
-					p
-						font-size: 12px
-						padding-bottom: 0px
-						margin-bottom: 0px
-						margin-top: 5px
-
-@media (min-width: 980px) and (max-width: 1050px)
-	.guide_home
-
-		ul.thumbnails
-			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-			li
-				margin-left: 0px
-				@include grid-fluid-span(6, $fluidGridColumnWidth, $fluidGridGutterWidth)
-				.thumbnail
-					h4
-						overflow: hidden
-						white-space: nowrap
-						text-overflow: ellipsis
-						text-align: left
-						margin-bottom: 3px
-						margin-top: 3px
-						font-size: 16px
-					img
-						@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
-						height: 120px
-					p
-						font-size: 12px
-						padding-bottom: 0px
-						margin-bottom: 0px
-						margin-top: 5px
