--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,15 +1,18 @@
 <!-- HTML5 DOCTYPE -->
 <!DOCTYPE html>
 <html lang="<%= I18n.locale.to_s %>">
+  <head>
+    <%= render :partial => "layouts/head" %>
+  </head>
   <body>
     <%= render :partial => "layouts/header" %>
-    <section class="container">
+    <div class="container">
       <div class="row-fluid">
         <div class="banner"></div>
         <%= flashy %>
         <%= yield %>
       </div>
-    </section>
+    </div>
     <footer class="footer">
       <%= render :partial => "layouts/footer" %>
     </footer>
