--- a/app/assets/stylesheets/city/smartCity/layout.css.sass
+++ b/app/assets/stylesheets/city/smartCity/layout.css.sass
@@ -1,5 +1,6 @@
 @media (min-width: 1200px) 
 	.container
+
 		.banner
 			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			height: 60px
@@ -101,11 +102,11 @@
 			display: inline-block
 			float: left
 		.grid-3_center
-			@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(10, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 		.grid-3_right
-			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 
@@ -176,11 +177,11 @@
 			display: inline-block
 			float: left
 		.grid-3_center
-			@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(10, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 		.grid-3_right
-			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 
@@ -248,16 +249,16 @@
 
 
 		.grid-3_left
-			@include grid-fluid-span(2, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 		.grid-3_center
-			@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 		.grid-3_right
-			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
-			display: inline-block
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			display: block
 			float: left
 
 
@@ -327,11 +328,11 @@
 			display: inline-block
 			float: left
 		.grid-3_center
-			@include grid-fluid-span(7, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 		.grid-3_right
-			@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			display: inline-block
 			float: left
 
