--- a/app/assets/stylesheets/city/base/_toolbar.css.sass
+++ b/app/assets/stylesheets/city/base/_toolbar.css.sass
@@ -1,5 +1,5 @@
-#toolbar 
-  @include makeColumnoMargin(2, 0)
+.toolbar 
+  @extend .grid-3_left
   display: table-cell
   h4
     margin-top: 24px
@@ -12,7 +12,7 @@
     overflow: hidden
     img
       @include border-radius(5px)
-      width: 150px
+      width: 100%
     h5 
       a
         text-decoration: none
@@ -22,7 +22,7 @@
       font-size: 15px
       text-align: center
     input, select
-      @include makeColumnoMargin(2, 0)
+      width: 100%
 
   .contact
     width: 140px
