--- a/app/assets/stylesheets/city/smartCity/trips.css.sass
+++ b/app/assets/stylesheets/city/smartCity/trips.css.sass
@@ -8,10 +8,8 @@
 		@include grid-fluid-span(9, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		li
 			display: inline-block
-			margin-bottom: 10px
-			margin-right: 10px
-			margin-left: 10px
-			margin-top: 10px
+			margin: 3% 4%
+			@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		.city
 			text-align: center
 .planning_item
@@ -24,6 +22,7 @@
 	padding: 4px
 	transition: all 0.2s ease-in-out 0s
 	position: relative
+	
 	img
 		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		height: 103px
@@ -60,6 +59,7 @@
 	padding: 4px
 	transition: all 0.2s ease-in-out 0s
 	position: relative
+
 	img
 		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 		height: 103px
