--- a/app/assets/stylesheets/city/smartCity/trips.css.sass
+++ b/app/assets/stylesheets/city/smartCity/trips.css.sass
@@ -85,3 +85,9 @@
 			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 			width: auto
 			height: auto
+
+@media (max-width: 767px)
+	.trip_content
+		ul
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
