--- a/app/assets/stylesheets/city/smartCity/guides.css.sass
+++ b/app/assets/stylesheets/city/smartCity/guides.css.sass
@@ -14,13 +14,10 @@
 			color: $gray
 			.cover
 				@include grid-fluid-span(3, $fluidGridColumnWidth, $fluidGridGutterWidth)
-				height: 200px
+
 				display: inline-block
 				float: left
 				margin-right: 20px
-				img
-					width: 180px
-					height: 180px
 
 
 	.comments_object
@@ -57,56 +54,38 @@
 	float: right
 
 
+@media (min-width: 1200px) 
+@media (min-width: 1000px) and (max-width: 1199px)
+@media (min-width: 980px) and (max-width: 1000px)
+@media (min-width: 768px) and (max-width: 979px)
+	.guide_all
+		.details
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			.cover
+				@include grid-fluid-span(5, $fluidGridColumnWidth, $fluidGridGutterWidth)
+
+		.comments_object
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.map
+			@include grid-fluid-span(8, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.places
+			width: 100%
+	.coment-social
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 767px)
+	.guide_all
+		.details
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+			.cover
+				@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.comments_object
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.map
+			@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+		.places
+			width: 100%
+	.coment-social
+		@include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
