--- a/app/assets/stylesheets/city/smartCity/frontpage.css.sass
+++ b/app/assets/stylesheets/city/smartCity/frontpage.css.sass
@@ -10,7 +10,10 @@
 	color: #fff
 	input
 		background-color: white
+		width: 100%
 
+.uneditable-input
+	width: 100%
 .titlecentral
 	text-align: center
 
