--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -29,6 +29,7 @@
 //@import "city/base/profile"
 @import "city/base/groups"
 @import "city/base/tags"
+
 //@import "city/base/contacts"
 //@import "city/base/registration"
 //@import "city/base/privacy"
@@ -59,6 +60,7 @@
 @import "city/smartCity/trips"
 @import "city/smartCity/frontpage"
 @import "city/smartCity/places"
+@import "city/smartCity/devise"
 
 
 //smart city b-rewrite
