--- a/app/assets/stylesheets/city/smartCity/devise.css.sass
+++ b/app/assets/stylesheets/city/smartCity/devise.css.sass
@@ -7,11 +7,21 @@
 	
 		@extend .grid-2_right
 		h2
-			width: 90%
+			
 #presentation
 	@extend .grid-2_left
 	display: none !important
 .sign_in,
+.login_data,
 .div_registration
 	@extend .grid-2_right
-	float: right
+
+
+.reg-labels
+	input.form_tag
+		width: 100%
+		display: block
+	input.btn
+		display: block
+		margin-bottom: 20px
+
