--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -14,7 +14,7 @@
       </div>
     </div>
     <footer class="footer">
-      <%= render :partial => "layouts/footer" %>
+      <%#= render :partial => "layouts/footer" %>
     </footer>
   </body>
 </html>
