--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,6 +61,7 @@
 @import "city/smartCity/frontpage"
 @import "city/smartCity/places"
 @import "city/smartCity/devise"
+@import "city/smartCity/comment"
 
 
 //smart city b-rewrite
