--- a/app/assets/stylesheets/gmaps4rails.css
+++ b/app/assets/stylesheets/gmaps4rails.css
@@ -1,5 +1,5 @@
 .map_container {
-  padding: 6px;
+  padding: none;
   border-width: 1px;
   border-style: solid;
   border-color: #ccc #ccc #999 #ccc;
